Added new tune of the week plus chords

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>
+          <a href="./Tunes/elzics-farewell.html">Elzic's Farewell</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/elzics-farewell.html">Elzic's Farewell</a>
+          <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance I</a>
         </p>
       </div>
       <div>
@@ -317,6 +317,9 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>: 3/4, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/445" target="_blank"
               >Itzikel</a
             >: Frailach, Em
@@ -334,7 +337,7 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
-            <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>: D
+            <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>: 7/8, D
             Freygish
           </li>
           <li class="tune-name">
@@ -415,7 +418,7 @@
           <li class="tune-name">
             <a href="https://thesession.org/tunes/12963" target="_blank"
               >Nigun Atik</a
-            >: E Freygish
+            >: 4/4, E Freygish
           </li>
           <li class="tune-name">
             <a
@@ -437,7 +440,7 @@
             >: Reel, G
           </li>
           <li class="tune-name">
-            <a href="./Tunes/l'orientale.html">L'Orientale</a>
+            <a href="./Tunes/l'orientale.html">L'Orientale</a>: 2/4
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/85" target="_blank"
@@ -486,7 +489,7 @@
             >: Jig, Gm
           </li>
           <li class="tune-name">
-            <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>: Am
+            <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>: 4/4, Am
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
@@ -551,7 +554,7 @@
             >: Jig, D
           </li>
           <li class="tune-name">
-            <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>
+            <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>: 2/4
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/14425" target="_blank"
