Added new tune of the week plus chords

--- a/chords.html
+++ b/chords.html
@@ -249,6 +249,9 @@
             <a href="./musicFiles/chords/khosid-wedding-dance-1-chords.html">Khosid Wedding Dance I</a>: F
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/khosid-wedding-dance-2-chords.html">Khosid Wedding Dance II</a>: Dm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/the-killavil.html">The Killavil</a>:
             Jig, Em
           </li>
