--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/elzics-farewell.html">Elzic's Farewell</a>
+          <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance I</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance I</a>
+          <a href="./Tunes/khosid-wedding-dances.html">Khosid Wedding Dance II</a>
         </p>
       </div>
       <div>
@@ -233,6 +233,9 @@
             <a href="https://thesession.org/tunes/221" target="_blank"
               >The Earl's Chair</a
             >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/elzics-farewell.html">Elzic's Farewell</a>: Reel, Am
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2410" target="_blank"
