Changed music player width for youtube, added new tune of week plus chords

--- a/Tunes/ratevka.html
+++ b/Tunes/ratevka.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header-tunes">
       <div class="title">
         <h1 class="title-text">
           <a href="../index.html">Whangarei Tunes</a>
@@ -56,20 +56,20 @@
         </li>
       </ul>
     </header>
-    <div class="tuneDescription text">
+    <!-- <div class="tuneDescription text">
       <p></p>
-    </div>
+    </div> -->
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/ratevka1.png"
+        src="../musicFiles/ratevka1.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/ratevka2.png"
+        src="../musicFiles/ratevka2.jpg"
         alt="Sheet music"
       />
     </div>
