--- a/chords.html
+++ b/chords.html
@@ -206,7 +206,7 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/hora-de-kaval-chords.html"
               >Hora de Kaval</a
-            >: Hora, D
+            >: Hora, D Hungarian minor
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/humours-of-ballyloughlin.html"
@@ -321,6 +321,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/rakish-paddy.html">Rakish Paddy</a>:
             Reel, D mix
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/ratevka-chords.html">Ratevka</a>:
+            Horo, A hijaz
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/red-jacket-chords.html">Red Jacket</a>:
