--- a/Tunes/khosid-wedding-dances.html
+++ b/Tunes/khosid-wedding-dances.html
@@ -67,7 +67,7 @@
       />
     </div>
     <div class="musicPlayer">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/AKI5xHLaM_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/AKI5xHLaM_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
   </body>
