--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance II</a>
+          <a href="./Tunes/khosid-wedding-dances.html">Khosid Wedding Dance III</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/khosid-wedding-dances.html">Khosid Wedding Dance III</a>,
-          <a href="./Tunes/björnlåten.html">Björnlåten harmony</a>
+          <a href="Tunes/ratevka.html">Ratevka</a>
         </p>
       </div>
       <div>
