Added new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/khosid-wedding-dances.html">Khosid Wedding Dance III</a>
+          <a href="Tunes/ratevka.html">Ratevka</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/ratevka.html">Ratevka</a>
+          <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>
         </p>
       </div>
       <div>
@@ -370,6 +370,13 @@
               target="_blank"
               >King Of The Fairies</a
             >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance I</a>
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/khosid-wedding-dances.html">Khosid Wedding Dances II & III</a>:
+            Dm
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/566" target="_blank"
