--- a/Tunes/ratevka.html
+++ b/Tunes/ratevka.html
@@ -73,6 +73,17 @@
         alt="Sheet music"
       />
     </div>
-    <div class="musicPlayer"></div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/0BVIprtW6Fs7nfZZa8if1E?utm_source=generator"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
   </body>
 </html>
