Added new tune of the week and chords

--- a/chords.html
+++ b/chords.html
@@ -106,6 +106,10 @@
             >: Polka, Am dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/biserka-chords.html">Biserka</a>:
+            Polska, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/bjornlaten.html">Björnlåten</a>:
             Polska, G
           </li>
@@ -360,6 +364,11 @@
               href="./musicFiles/chords/slangpolska-efter-byss-calle-chords.html"
               >Slängpolska efter Byss-Calle</a
             >: Polska, G
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/da-slockit-light-chords.html"
+              >Da Slockit Light</a
+            >: March, D
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
