--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/ratevka.html">Ratevka</a>
+          <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>
+          <a href="Tunes/biserka.html">Biserka</a>
         </p>
       </div>
       <div>
@@ -461,6 +461,9 @@
             <a href="https://thesession.org/tunes/86" target="_blank"
               >Rakish Paddy</a
             >: Reel, D mix
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/ratevka.html">Ratevka</a>: Waltz, Gm
           </li>
           <li class="tune-name">
             <a href="./Tunes/red-jacket.html">Red Jacket</a>: Slip Jig
