Added new tunes of the week

--- a/chords.html
+++ b/chords.html
@@ -294,6 +294,11 @@
             >: Waltz, Em
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/misirlou-chords.html"
+              >Misirlou</a
+            >: D Freygish
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/musical-priest.html"
               >The Musical Priest</a
             >: Reel, Bm
@@ -328,7 +333,7 @@
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/ratevka-chords.html">Ratevka</a>:
-            Horo, A hijaz
+            Horo, A Hijaz
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/red-jacket-chords.html">Red Jacket</a>:
@@ -348,6 +353,11 @@
             <a href="./musicFiles/chords/sailors-wife-chords.html"
               >Sailor's Wife</a
             >: Jig, Dm
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/sakkijarven-polkka-chords.html"
+              >Säkkijärven Polkka</a
+            >: Polka, Cm
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/seanamhac-tube-station.html"
