--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>
+          <a href="Tunes/biserka.html">Biserka</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/biserka.html">Biserka</a>
+          <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>
         </p>
       </div>
       <div>
@@ -150,6 +150,9 @@
             <a href="https://thesession.org/tunes/481" target="_blank"
               >Bill Sullivan's</a
             >: Polka, D (and A)
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/biserka.html">Biserka</a>: Waltz, Gm
           </li>
           <!-- <li class="tune-name">
             <a
@@ -518,6 +521,10 @@
             <a href="./Tunes/slangpolska-efter-byss-calle.html"
               >Slängpolska efter Byss-Calle</a
             >: Polska, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>:
+            March, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/9196" target="_blank"
