Added tune to tune of the week

--- a/Tunes/sakkijarvenpolkka.html
+++ b/Tunes/sakkijarvenpolkka.html
@@ -66,6 +66,13 @@
         alt="Sheet music"
       />
     </div>
+    <div class="sheetMusicContainer">
+      <img
+        class="img-tune"
+        src="../musicFiles/sakkijarven-polkka2.jpg"
+        alt="Sheet music"
+      />
+    </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
