--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,7 +92,8 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/biserka.html">Biserka</a>
+          <a href="Tunes/biserka.html">Biserka</a>,
+          <a href="Tunes/misirlou.html">Miserlou</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
