Added a few more tunes plus chords

--- a/chords.html
+++ b/chords.html
@@ -400,6 +400,11 @@
             Polka, A
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/tom-billys-chords.html"
+              >Tom Billy's</a
+            >: Jig, A mix
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
               >Tripping Up The Stairs</a
             >: Jig, D
@@ -408,6 +413,11 @@
             <a href="./musicFiles/chords/vals-efter-lasse-i-lyby.html"
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/whelans-chords.html"
+              >Whelan's</a
+            >: Jig, Em
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/white-petticoat-chords.html"
