--- a/Tunes/tom-billys.html
+++ b/Tunes/tom-billys.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Säkkijärven Polkka</title>
+    <title>Tom Billy's</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,56 +60,12 @@
       <p></p>
     </div> -->
     <div class="sheetMusicContainer">
-      <p class="text">
-        I've included three versions here. The first is what I'd consider
-        intermediate and is the one I'd focus on.
-      </p>
       <img
         class="img-tune"
-        src="../musicFiles/sakkijarven-polkka.jpg"
+        src="../musicFiles/tom-billys.jpg"
         alt="Sheet music"
       />
     </div>
-    <div class="sheetMusicContainer">
-      <p class="text">
-        This second version is based on the accordion playing of Viljo
-        Vesterinen. It is the main version that most people seem to play,
-        although it does not include the key change to Fm for the last section.
-        It is pretty close to the first version, but the melody in the last part
-        has a bit more complexity.
-      </p>
-      <img
-        class="img-tune"
-        src="../musicFiles/sakkijarven-polkka3.jpg"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="sheetMusicContainer">
-      <p class="text">
-        This third version has been moved to Dm and has been simplified a bit.
-        The melody basically follows the tune when it is sung. The last section
-        here is a transitional part in case you'd like to either leave it out or
-        use it as a segue into what's normally the last section. If you want to
-        include the key change for typical last section, then transpose to Gm
-        instead of Dm.
-      </p>
-      <img
-        class="img-tune"
-        src="../musicFiles/sakkijarven-polkka2.jpg"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/7Kf6ocZ3t7ntDIKRBdv75t?utm_source=generator"
-        width="100%"
-        height="352"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
+    <div class="musicPlayer"></div>
   </body>
 </html>
