--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/biserka.html">Biserka</a>,
-          <a href="Tunes/misirlou.html">Miserlou</a>
+          <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>
+          <a href="Tunes/tom-billys.html">Tom Billy's</a>,
+          <a href="https://thesession.org/tunes/1447">Whelan's</a>
         </p>
       </div>
       <div>
@@ -418,6 +418,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>: Waltz, Em
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/misirlou.html">Misirlou</a>: D Freygish
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/73" target="_blank"
