Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -260,6 +260,10 @@
             Jig, Em
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/kolomeike-chords.html">Kolomeike</a>:
+            Dm, Hungarian minor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/little-beggarman.html"
               >The Little Beggarman</a
             >: Hornpipe, A
