--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>
+          <a href="Tunes/tom-billys.html">Tom Billy's</a>,
+          <a href="https://thesession.org/tunes/1447">Whelan's</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/tom-billys.html">Tom Billy's</a>,
-          <a href="https://thesession.org/tunes/1447">Whelan's</a>
+          <a href="Tunes/kolomeike.html">Kolomeike</a>
         </p>
       </div>
       <div>
@@ -165,20 +165,20 @@
           <li class="tune-name">
             <a href="./Tunes/björnlåten.html">Björnlåten</a>: Polska, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/boys-of-blue-hill/"
               target="_blank"
               >The Boys Of Bluehill</a
             >: Hornpipe, D
-          </li>
-          <li class="tune-name">
+          </li> -->
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/brian-borus-march-3-part/"
               target="_blank"
               >Brian Boru's</a
             >: March, Am
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/britches-full-of-stitches/"
@@ -310,11 +310,11 @@
               >Hardiman The Fiddler </a
             >: Slig jig, Dmix
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/49" target="_blank"
               >The Harvest Home</a
             >: Hornpipe, D
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="./Tunes/hora-de-kaval.html">Hora de Kaval</a>: Hora, Dm
           </li>
@@ -356,25 +356,25 @@
           <li class="tune-name">
             <a href="./Tunes/kalamatianos.html">The Kalamatianos</a>: Oro, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
               target="_blank"
               >The Kesh</a
             >: Jig, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/667" target="_blank"
               >The Killavil</a
             >: Jig, Em
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/king-of-the-fairies/"
               target="_blank"
               >King Of The Fairies</a
             >: Hornpipe, Em dor
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="./Tunes/khosid-wedding-dance-1.html">Khosid Wedding Dance I</a>
           </li>
@@ -430,27 +430,27 @@
           <li class="tune-name">
             <a href="https://thesession.org/tunes/880" target="_blank"
               >Da New Rigged Ship</a
-            >: Reel or Hornpipe, A
+            >: Hornpipe, A
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/12963" target="_blank"
               >Nigun Atik</a
             >: 4/4, E Freygish
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/off-to-california/"
               target="_blank"
               >Off To California</a
             >: Hornpipe, D
-          </li>
-          <li class="tune-name">
+          </li> -->
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/out-on-the-ocean/"
               target="_blank"
               >Out On The Ocean</a
             >: Jig, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="./Tunes/over-the-moor-to-maggie.html"
               >Over The Moor To Maggie</a
@@ -476,13 +476,13 @@
             <a href="./Tunes/red-jacket.html">Red Jacket</a>: Slip Jig
             (Polska?), A
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/rights-of-man/"
               target="_blank"
               >The Rights Of Man</a
             >: Hornpipe, Em dor
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/250" target="_blank"
               >The Road To Lisdoonvarna</a
@@ -496,12 +496,15 @@
           <li class="tune-name">
             <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>: Jig, Dm
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/st-annes-reel/"
               target="_blank"
               >St. Anne's Reel</a
             >: Reel, D
+          </li> -->
+          <li class="tune-name">
+            <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>: Polka, Cm
           </li>
           <li class="tune-name">
             <a href="./Tunes/seanamhac-tube-station.html"
@@ -511,11 +514,11 @@
           <li class="tune-name">
             <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>: 4/4, Am
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
               >Shoe The Donkey</a
             >: Mazurka, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
@@ -535,13 +538,13 @@
               >Soggy's</a
             >: Slip jig, A
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/sonnys-mazurka/"
               target="_blank"
               >Sonny's Mazurka</a
             >: Mazurka, D
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
