Added new tune of the week with chords, added corrected version of kolomeike from last week

--- a/chords.html
+++ b/chords.html
@@ -409,6 +409,11 @@
             >: Jig, A mix
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/trip-to-herves-chords.html"
+              >Trip To Herve's</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
               >Tripping Up The Stairs</a
             >: Jig, D
