--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/tom-billys.html">Tom Billy's</a>,
-          <a href="https://thesession.org/tunes/1447">Whelan's</a>
+          <a href="Tunes/kolomeike.html">Kolomeike</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/kolomeike.html">Kolomeike</a>
+          <a href="Tunes/trip-to-herves.html">Trip to Herve's</a>
         </p>
       </div>
       <div>
@@ -574,6 +573,10 @@
             >: Polka, A
           </li>
           <li class="tune-name">
+            <a href="Tunes/tom-billys.html">Tom Billy's</a>:
+            Jig, A mix
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/tripping-up-the-stairs/"
               target="_blank"
@@ -587,6 +590,10 @@
             <a href="https://thesession.org/tunes/14425" target="_blank"
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/1447">Whelan's</a>:
+            Jig, Em
           </li>
           <li class="tune-name">
             <a href="./Tunes/white-petticoat.html">The White Petticoat</a>: Jig,
