Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -374,6 +374,11 @@
             >: Am
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/sirto-chords.html"
+              >Širto</a
+            >: D
+          </li>
+          <li class="tune-name">
             <a
               href="./musicFiles/chords/slangpolska-efter-byss-calle-chords.html"
               >Slängpolska efter Byss-Calle</a
