--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/kolomeike.html">Kolomeike</a>
+          <a href="Tunes/trip-to-herves.html">Trip to Herves</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/trip-to-herves.html">Trip to Herve's</a>
+          <a href="Tunes/sirto.html">Širto</a>
         </p>
       </div>
       <div>
@@ -382,6 +382,10 @@
             Dm
           </li>
           <li class="tune-name">
+            <a href="Tunes/kolomeike.html">Kolomeike</a>:
+            D Hungarian minor
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/566" target="_blank"
               >The Little Beggarman</a
             >: Hornpipe, A mix
@@ -575,6 +579,10 @@
           <li class="tune-name">
             <a href="Tunes/tom-billys.html">Tom Billy's</a>:
             Jig, A mix
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/trip-to-herves.html">Trip to Herve's</a>:
+            Reel, D
           </li>
           <li class="tune-name">
             <a
