--- a/sundayTunes.html
+++ b/sundayTunes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friday Tunes</title>
+    <title>Sunday Tunes</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +29,7 @@
                 <a href="sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="fridayTunes.html">Friday Tunes</a>
+                <a href="sundayTunes.html">Sunday Tunes</a>
               </li>
             </ul>
           </div>
@@ -62,25 +62,19 @@
       alt="picture of acoustic instruments"
     />
     <div class="centered-content">
-      <h2 class="name">Friday Tunes</h2>
+      <h2 class="name">Sunday Tunes</h2>
     </div>
     <div class="container">
       <div class="container-content cc-tunes">
         <div class="text">
           <p>
-            <!-- Here's a sample of some of the things we used to play for 'Fridays
-            Tunes', including everything that can be found on the
+            Here's a sample of some of the things play for 'Sunday Tunes',
+            including everything that can be found on the
             <a href="sessionClass.html" class="tune-group">Session Class</a>
             page. For the most part, only tunes that more than one of us play
             the melody have been included, so this isn't a comprehensive list of
-            everyone’s repertoire who participates. We'll keep adding things to
-            the list as we discover more shared repertoire and learn new tunes
-            together. We're not playing in the public on Fridays at the moment,
-            but stay tuned as things unfold. -->
-            This page presents tunes beyond ones that are taught in our session
-            class. It features a lot of classics as well as more obscure and
-            difficult pieces. These are great for pushing your repertoire to the
-            boundaries and represent our commitment to bringing the Whangarei
+            everyone’s repertoire who participates. These are great for growing
+            your skills and represent our commitment to bringing the Whangarei
             community a diverse range of folk tunes from all over. This list
             will grow over time, so stay tuned!
           </p>
@@ -88,13 +82,13 @@
       </div>
       <div class="tunes-list">
         <ul>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/an-phis-fhliuch/"
               target="_blank"
               >An Phis Fluich</a
             >: Slip jig, Dmix
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/banish-misfortune/"
@@ -110,17 +104,19 @@
             >: Reel, G
           </li>
           <li class="tune-name">
-            <a
+            <!-- <a
               href="https://irish.session.nz/tunes-archive/battering-ram/"
               target="_blank"
               >The Battering Ram</a
             >: Jig, G
-          </li>
-          <li class="tune-name">
+          </li> -->
+            <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/15175" target="_blank"
               >Big Sciota</a
             >: Reel, G
+          </li> -->
           </li>
+
           <li class="tune-name">
             <a href="https://thesession.org/tunes/5" target="_blank">
               The Blarney Pilgrim</a
@@ -131,11 +127,11 @@
               >Calliope House</a
             >: Jig, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
               >Chinquapin Hunting</a
             >: Polka, A
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1" target="_blank">
               Cooley's </a
@@ -188,7 +184,7 @@
             <a
               href="https://irish.session.nz/tunes-archive/jim-wards/"
               target="_blank"
-              >Jim Wards</a
+              >Jim Ward's</a
             >: Jig, G
           </li>
           <li class="tune-name">
@@ -266,18 +262,18 @@
               >The Queen Of The Rushes</a
             >: Jig, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/2639" target="_blank"
               >Ramnee Ceilidh</a
             >: Reel, D
-          </li>
-          <li class="tune-name">
+          </li> -->
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/reconciliation/"
               target="_blank"
               >The Reconciliation</a
             >: Reel, A
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/91" target="_blank"
               >The Roaring Barmaid</a
