Added new tunes of the week, wedding dance chords

--- a/chords.html
+++ b/chords.html
@@ -250,10 +250,16 @@
             >: G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/khosid-wedding-dances-chords.html">Khosid Wedding Dances (all)</a>
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/khosid-wedding-dance-1-chords.html">Khosid Wedding Dance I</a>: F
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/khosid-wedding-dance-2-chords.html">Khosid Wedding Dance II</a>: Dm
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/khosid-wedding-dance-3-chords.html">Khosid Wedding Dance III</a>: Dm
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/the-killavil.html">The Killavil</a>:
@@ -354,6 +360,11 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/roslyn-castle-chords.html"
+              >Roslyn Castle</a
+            >: Slow Air, Em
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/sailors-wife-chords.html"
               >Sailor's Wife</a
             >: Jig, Dm
@@ -422,6 +433,11 @@
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
               >Tripping Up The Stairs</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/up-da-stroods-chords.html"
+              >Up Da Stroods</a
+            >: Reel, D
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/vals-efter-lasse-i-lyby.html"
