--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/trip-to-herves.html">Trip to Herves</a>
+          <a href="Tunes/sirto.html">Širto</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/sirto.html">Širto</a>
+          <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>,
+          <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>
         </p>
       </div>
       <div>
@@ -526,6 +527,9 @@
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/sirto.html">Širto</a>: Oro, D
           </li>
           <li class="tune-name">
             <a href="./Tunes/slangpolska-efter-byss-calle.html"
