Added new tunes of the week with chords

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -84,7 +84,7 @@
             example, The NZ Irish Session allows you to slow a tune down while
             keeping the pitch constant. On The Session, there are usually
             multiple versions, who has recorded the tune, tune name variations,
-            discussion and more. Keep an eye on below as the list will grow with
+            discussion and more. All other tunes have been transcribed by Bryan Owens. Keep an eye on below as the list will grow with
             time.
           </p>
         </div>
@@ -92,12 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/sirto.html">Širto</a>
+          <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>,
+          <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>,
-          <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>
+          <a href="Tunes/baym-rebn-in-palesteena.html">Baym Rebn In Palesteena</a>,
+          <a href="Tunes/franks.html">Frank's Reel</a>
         </p>
       </div>
       <div>
