--- a/chords.html
+++ b/chords.html
@@ -106,6 +106,11 @@
             >: Polka, Am dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/baym-rebn-in-palesteena-chords.html"
+              >Baym Rebn In Palesteena</a
+            >: D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/biserka-chords.html">Biserka</a>:
             Polska, G
           </li>
@@ -189,6 +194,11 @@
             <a href="./musicFiles/chords/foxhunter.html">The Foxhunter</a>: Slip
             Jig, D
           </li>
+        </li>
+        <li class="tune-name">
+          <a href="./musicFiles/chords/franks-chords.html"
+            >Frank's</a
+          >: Reel, A
         </li>
         <li class="tune-name">
           <a href="./musicFiles/chords/da-full-rigged-ship-chords.html">Da Full Rigged Ship</a>: Jig, Am
