--- a/chords.html
+++ b/chords.html
@@ -343,6 +343,10 @@
             >: Reel, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/polonas-de-sexdrega-chords.html">Polonäs de Sexdrega</a>
+            : Polonäs, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/push-the-pigs-foot.html"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
