--- a/sessionClass.html
+++ b/sessionClass.html
@@ -69,7 +69,7 @@
         <div class="text">
           <p>
             The Monday Session Classes are welcome to all ability levels. This
-            is a great opportunity where folks can participate in a group
+            is a great opportunity where folks can participate in a group
             setting and build up their repertoire. We begin at 4pm and spend the
             first hour or so learning new tunes, technique and more. The second
             portion (5-6pm) is spent reviewing all of the tunes we know
@@ -92,13 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>,
-          <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>
+          <a href="Tunes/baym-rebn-in-palesteena.html">Baym Rebn In Palesteena</a>,
+          <a href="Tunes/franks.html">Frank's Reel</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/baym-rebn-in-palesteena.html">Baym Rebn In Palesteena</a>,
-          <a href="Tunes/franks.html">Frank's Reel</a>
+          <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>
         </p>
       </div>
       <div>
@@ -499,6 +498,9 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>: March/Air, Em
+          </li>
+          <li class="tune-name">
             <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>: Jig, Dm
           </li>
           <!-- <li class="tune-name">
@@ -598,6 +600,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>: 2/4
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>: Reel, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/14425" target="_blank"
