Added new tune of week w/ chords

--- a/chords.html
+++ b/chords.html
@@ -389,6 +389,11 @@
             >: Polka, Cm
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/salt-spring-chords.html"
+              >Salt Spring</a
+            >: Reel, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/seanamhac-tube-station.html"
               >Seanamhac Tube Station</a
             >: Reel, G dor
