--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/baym-rebn-in-palesteena.html">Baym Rebn In Palesteena</a>,
-          <a href="Tunes/franks.html">Frank's Reel</a>
+          <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>
+          <a href="Tunes/salt-spring.html">Salt Spring</a>
         </p>
       </div>
       <div>
@@ -139,6 +138,9 @@
             <a href="https://thesession.org/tunes/238" target="_blank"
               >The Ballydesmond (#2)</a
             >: Polka, Am
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/baym-rebn-in-palesteena.html">Baym Rebn In Palesteena</a>: D
           </li>
           <li class="tune-name">
             <a
@@ -288,6 +290,9 @@
             <a href="https://thesession.org/tunes/482" target="_blank"
               >The Foxhunter</a
             >: Slip jig, D
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/franks.html">Frank's Reel</a>: Reel, A
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/878"
