Added new tune of the week and chords

--- a/chords.html
+++ b/chords.html
@@ -260,6 +260,9 @@
             >: G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/kerry-polska-chords.html">The Kerry Polska</a>: D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/khosid-wedding-dances-chords.html">Khosid Wedding Dances (all)</a>
           </li>
           <li class="tune-name">
