--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>
+          <a href="Tunes/salt-spring.html">Salt Spring</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/salt-spring.html">Salt Spring</a>
+          <a href="Tunes/kerry-polska.html">The Kerry Polska</a>
         </p>
       </div>
       <div>
@@ -467,6 +467,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/l'orientale.html">L'Orientale</a>: 2/4
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>: Polonäs, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/85" target="_blank"
