Yet one more edit to kerry polska text

--- a/Tunes/kerry-polska.html
+++ b/Tunes/kerry-polska.html
@@ -61,9 +61,8 @@
     </div> -->
     <div class="sheetMusicContainer">
       <p class="text">
-        I count this tune in 3/4, but I wrote it out in both 3/4 and 9/8.
-        However I do personally find it easer to read in 9/8 without all of
-        those triplets, so suit yourself!
+        I like to count this tune in 3/4, though I personally find it easer to
+        read in 9/8 without all of those triplets, so suit yourself!
       </p>
       <img
         class="img-tune"
