Added new tune of the week, some js tests

--- a/chords.html
+++ b/chords.html
@@ -73,7 +73,7 @@
             : Jig, G
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/adventspolksa.html">Adeventspolksa</a>
+            <a href="./musicFiles/chords/adventspolksa.html">Adventspolksa</a>
             : Polska, G
           </li>
           <li class="tune-name">
@@ -440,6 +440,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/sweenys-chords.html"> Sweeny's</a>:
             Polka, A
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/tolka-polka-chords.html"
+              >Tolka Polka</a
+            >: Polka, Am
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/tom-billys-chords.html"
