--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/salt-spring.html">Salt Spring</a>
+          <a href="Tunes/kerry-polska.html">The Kerry Polska</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/kerry-polska.html">The Kerry Polska</a>
+          <a href="Tunes/tolka-polka.html">Tolka Polka</a>
         </p>
       </div>
       <div>
@@ -521,6 +521,8 @@
           <li class="tune-name">
             <a href="Tunes/sakkijarvenpolkka.html">Säkkijärven Polkka</a>: Polka, Cm
           </li>
+          <li class="tune-name">
+            <a href="Tunes/salt-spring.html">Salt Spring</a>: Reel, A</li>
           <li class="tune-name">
             <a href="./Tunes/seanamhac-tube-station.html"
               >Seanamhac Tube Station</a
