--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/kerry-polska.html">The Kerry Polska</a>
+          <a href="Tunes/tolka-polka.html">Tolka Polka</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/tolka-polka.html">Tolka Polka</a>
+          <a href="Tunes/grey-owl.html">Grey Owl</a>
         </p>
       </div>
       <div>
@@ -361,13 +361,9 @@
           <li class="tune-name">
             <a href="./Tunes/kalamatianos.html">The Kalamatianos</a>: Oro, G
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/kesh-jig/"
-              target="_blank"
-              >The Kesh</a
-            >: Jig, G
-          </li> -->
+          <li class="tune-name">
+            <a href="Tunes/kerry-polska.html">The Kerry Polska</a>: Polska, D
+          </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/667" target="_blank"
               >The Killavil</a
