Updated grey owl and tolka polka to include bowing suggestions

--- a/Tunes/grey-owl.html
+++ b/Tunes/grey-owl.html
@@ -61,8 +61,9 @@
     </div> -->
     <div class="sheetMusicContainer">
       <p class="centered-content text">
-        I've included two versions - the first is based on the playing of Darol
-        Anger.
+        I've included three versions here, with the first based on the playing
+        of Darol Anger. The third version is the same as this one but with some
+        bowing options.
       </p>
       <img
         class="img-tune"
@@ -77,6 +78,16 @@
       <img
         class="img-tune"
         src="../musicFiles/grey-owl-2.png"
+        alt="Sheet music"
+      />
+    </div>
+    <div class="sheetMusicContainer">
+      <p class="centered-content text">
+        And one with some bowing suggestions...
+      </p>
+      <img
+        class="img-tune"
+        src="../musicFiles/grey-owl-bowing.png"
         alt="Sheet music"
       />
     </div>
