--- a/Tunes/tolka-polka.html
+++ b/Tunes/tolka-polka.html
@@ -67,6 +67,16 @@
         alt="Sheet music"
       />
     </div>
+    <div class="sheetMusicContainer">
+      <p class="text centered-content">
+        Here are a few suggestions for fiddle bowing.
+      </p>
+      <img
+        class="img-tune"
+        src="../musicFiles/tolka-polka-bowing.png"
+        alt="Sheet music"
+      />
+    </div>
 
     <div class="musicPlayer"></div>
   </body>
