Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -291,6 +291,8 @@
               >The Little Beggarman</a
             >: Hornpipe, A
           </li>
+          <li class="tune-name"><a href="./musicFiles/chords/little-david-seats-the-bride-chords.html">Little David Seats The Bride</a>: 2/4 
+          </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/limousin-mazurka-chords.html"
               >Limousin Mazurka</a
