--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/tolka-polka.html">Tolka Polka</a>
+          <a href="Tunes/grey-owl.html">Grey Owl</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/grey-owl.html">Grey Owl</a>
+          <a href="Tunes/little-david-seats-the-bride.html"
+            >Little David Seats The Bride</a>
         </p>
       </div>
       <div>
@@ -588,6 +589,9 @@
             <a href="https://thesession.org/tunes/1549" target="_blank"
               >Sweeny's</a
             >: Polka, A
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/tolka-polka.html">Tolka Polka</a>: Polka, Am
           </li>
           <li class="tune-name">
             <a href="Tunes/tom-billys.html">Tom Billy's</a>:
