--- a/musicFiles/chords/little-david-seats-the-bride-chords.html
+++ b/musicFiles/chords/little-david-seats-the-bride-chords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Josephins Dopvals</title>
+    <title>Little David Seats The Bride</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header-tunes">
       <div class="title">
         <h1 class="title-text">
           <a href="../.././index.html">Whangarei Tunes</a>
@@ -56,39 +56,16 @@
         </li>
       </ul>
     </header>
-    <div class="tuneDescription text">
-      <p>
-        F is the original key, though I've mostly heard it transposed to the key
-        of G in sessions. On guitar, I'd suggest a capo on the 3rd fret if
-        you're playing in F, so a D shape will be F. Otherwise you'll get tired
-        of barring chords, plus you won't get to play with as many open strings.
-      </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/josephins2-chords.jpg"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../.././musicFiles/chords/chord-page/josephins-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/little-david-seats-the-bride-chords.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/4da0Ebx5kOgnbRyPhpBHSP?utm_source=generator"
-        width="100%"
-        height="250"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0vIzQuzlQzWc5YUCqZPhvo?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </body>
 </html>
